# colorcol-rs

./: .gitignore  Cargo.toml  README.md  demo.tape
demo/: demo.tape
src/: colorcol.kak  emit.rs  lib.rs  main.rs  scan.rs
tests/: differential.rs
